--- a/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
@@ -22,3 +22,8 @@ screen_space = { path = "../../../../../screen_space" }
 ttf-parser = "0.15.0"
 proptest = "0.10"
 pub_arb_std = { path = "../../../../../pub_arb/std"}
+
+[features]
+default = []
+# Only affects tests
+dump-all-characters-texture = []
