get DuplicateLines working, without the laxity increase I expected

--- a/libs/editor/libs/edit/Cargo.toml
+++ b/libs/editor/libs/edit/Cargo.toml
@@ -13,6 +13,9 @@ path = "../cursors"
 [dependencies.editor_types]
 path = "../editor_types"
 
+[dependencies.is_linebreak_char]
+path = "../../../is_linebreak_char"
+
 [dependencies.macros]
 path = "../../../macros"
 
