--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -46,6 +46,7 @@ path = "../search"
 [dependencies]
 proptest = { version = "0.10", optional = true }
 pretty_assertions = { version = "0.6.1", optional = true }
+text_buffer_testing = { path = "../text_buffer_testing", optional = true }
 pub_arb_cursors = { path = "../../../pub_arb/cursors", optional = true }
 pub_arb_edit = { path = "../../../pub_arb/edit", optional = true }
 pub_arb_std = { path = "../../../pub_arb/std", optional = true }
@@ -55,6 +56,7 @@ pub_arb_vec1 = { path = "../../../pub_arb/vec1", optional = true }
 [dev-dependencies]
 proptest = "0.10"
 pretty_assertions = "0.6.1"
+text_buffer_testing = { path = "../text_buffer_testing" }
 pub_arb_cursors = { path = "../../../pub_arb/cursors" }
 pub_arb_edit = { path = "../../../pub_arb/edit" }
 pub_arb_std = { path = "../../../pub_arb/std" }
@@ -64,4 +66,4 @@ pub_arb_vec1 = { path = "../../../pub_arb/vec1" }
 [features]
 default = []
 extra-prints = ["edit/extra-prints"]
-pub_arb = ["proptest", "pretty_assertions", "pub_arb_cursors", "pub_arb_edit", "pub_arb_std", "pub_arb_text_pos", "pub_arb_vec1"]
+pub_arb = ["text_buffer_testing", "proptest", "pretty_assertions", "pub_arb_cursors", "pub_arb_edit", "pub_arb_std", "pub_arb_text_pos", "pub_arb_vec1"]
