sketch out moving tests to be interpreted, to reduce compile time

--- a/libs/editor/libs/text_buffer_testing/Cargo.toml
+++ b/libs/editor/libs/text_buffer_testing/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [lib]
 path = "./src/text_buffer_testing.rs"
+doctest = false
 
 [dependencies.panic_safe_rope]
 path = "../../../panic_safe_rope"
