--- a/libs/platform_layer/libs/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp_render/Cargo.toml
@@ -18,7 +18,7 @@ macros = { path = "../../../macros" }
 
 [dev-dependencies]
 pub_arb_abs = { path = "../../../pub_arb/abs" }
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../../proptest_wrapper" }
 
 [features]
 clip-debugging = []
