--- a/libs/arb_macros/Cargo.toml
+++ b/libs/arb_macros/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 path = "./src/arb_macros.rs"
 
 [dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
