--- a/libs/cursors/Cargo.toml
+++ b/libs/cursors/Cargo.toml
@@ -26,13 +26,13 @@ path = "../rope_pos"
 path = "../vec1"
 
 [dependencies]
-proptest = { version = "0.10", optional = true }
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }
 pub_arb_platform_types = { path = "../pub_arb/platform_types", optional = true }
 pub_arb_text_pos = { path = "../pub_arb/text_pos", optional = true }
 pub_arb_vec1 = { path = "../pub_arb/vec1", optional = true }
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
 pub_arb_platform_types = { path = "../pub_arb/platform_types" }
 pub_arb_text_pos = { path = "../pub_arb/text_pos" }
 pub_arb_vec1 = { path = "../pub_arb/vec1" }
