--- a/libs/edit/Cargo.toml
+++ b/libs/edit/Cargo.toml
@@ -38,12 +38,12 @@ path = "../rope_pos"
 path = "../vec1"
 
 [dependencies]
-proptest = { version = "0.10", optional = true }
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }
 pub_arb_cursors = { path = "../pub_arb/cursors", optional = true }
 pub_arb_vec1 = { path = "../pub_arb/vec1", optional = true }
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
 pub_arb_cursors = { path = "../pub_arb/cursors" }
 pub_arb_vec1 = { path = "../pub_arb/vec1" }
 
