--- a/libs/platform_layer/libs/edited_storage/Cargo.toml
+++ b/libs/platform_layer/libs/edited_storage/Cargo.toml
@@ -14,4 +14,4 @@ wimp_types = { path = "../wimp_types" }
 rand = "0.7"
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../../proptest_wrapper" }
