--- a/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/window_layer/gl_layer/text_rendering/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Ryan1729 <ryan1729@gmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 path = "./src/text_rendering.rs"
 
@@ -20,7 +18,7 @@ screen_space = { path = "../../../../../screen_space" }
 
 [dev-dependencies]
 ttf-parser = "0.15.0"
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../../../../proptest_wrapper" }
 pub_arb_std = { path = "../../../../../pub_arb/std"}
 
 [features]
