--- a/libs/pub_arb/cursors/Cargo.toml
+++ b/libs/pub_arb/cursors/Cargo.toml
@@ -9,4 +9,4 @@ path = "./src/pub_arb_cursors.rs"
 
 [dependencies]
 cursors = { path = "../../cursors", features = ["pub_arb"]}
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../proptest_wrapper" }
