--- a/libs/pub_arb/g_i/Cargo.toml
+++ b/libs/pub_arb/g_i/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 path = "./src/pub_arb_g_i.rs"
 
 [dependencies]
-g_i = { path = "../../../libs/platform_types/libs/g_i", features = ["pub_arb"]}
-proptest = "0.10"
+g_i = { path = "../../g_i", features = ["pub_arb"]}
+proptest = { package = "proptest_wrapper", path = "../../proptest_wrapper" }
