--- a/libs/pub_arb/std/Cargo.toml
+++ b/libs/pub_arb/std/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 path = "./src/pub_arb_std.rs"
 
 [dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../proptest_wrapper" }
