--- a/libs/pub_arb/text_pos/Cargo.toml
+++ b/libs/pub_arb/text_pos/Cargo.toml
@@ -9,4 +9,4 @@ path = "./src/pub_arb_text_pos.rs"
 
 [dependencies]
 text_pos = { path = "../../../libs/text_pos", features = ["pub_arb"]}
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../../proptest_wrapper" }
