--- a/libs/rope_pos/Cargo.toml
+++ b/libs/rope_pos/Cargo.toml
@@ -22,4 +22,4 @@ path = "../panic_safe_rope"
 path = "../perf_viz"
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
