--- a/libs/search/Cargo.toml
+++ b/libs/search/Cargo.toml
@@ -25,4 +25,4 @@ path = "../editor_types"
 path = "../rope_pos"
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
