--- a/libs/text_pos/Cargo.toml
+++ b/libs/text_pos/Cargo.toml
@@ -9,10 +9,10 @@ path = "./src/text_pos.rs"
 
 [dependencies]
 macros = { path = "../macros" }
-proptest = { version = "0.10", optional = true }
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }
 
 [dev-dependencies]
-proptest = "0.10"
+proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }
 
 [features]
 default = []
