make text_buffer tests disableable at compile time

--- a/libs/text_buffer/Cargo.toml
+++ b/libs/text_buffer/Cargo.toml
@@ -66,6 +66,15 @@ pub_arb_text_pos = { path = "../pub_arb/text_pos" }
 pub_arb_vec1 = { path = "../pub_arb/vec1" }
 
 [features]
-default = []
+default = ["uncategorized_tests", "cursor_manipulation", "edit_tests", "inserting_then_deleting"]
 extra-prints = ["edit/extra-prints"]
 pub_arb = ["regex", "text_buffer_testing", "proptest", "pretty_assertions", "pub_arb_cursors", "pub_arb_edit", "pub_arb_std", "pub_arb_text_pos", "pub_arb_vec1"]
+# enables tests becasue some take a long time to compile {
+uncategorized_tests = []
+cursor_manipulation = []
+edit_tests = []
+inserting_then_deleting = []
+# }
+# So, to compile and run only certain tests you can run the following in the same
+# folder as this file:
+# $ cargo t -r --no-default-features --features="desired features here"
