Try to make proptests disablable with a cfg, find that some tests aren't run by default

--- a/libs/proptest_wrapper/Cargo.toml
+++ b/libs/proptest_wrapper/Cargo.toml
@@ -8,3 +8,7 @@ path = "./src/proptest_wrapper.rs"
 
 [dependencies]
 proptest = "1.1.0"
+
+[features]
+deafult = ["do_proptests"]
+do_proptests = []
