vendor rust-atomicwrites and update tempfile version
This removes `remove_dir_all` as a dependency

--- a/libs/platform_layer/libs/atomically/Cargo.toml
+++ b/libs/platform_layer/libs/atomically/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 path = "src/atomically.rs"
 
 [dependencies]
-atomicwrites = "0.3"
+atomicwrites = { path = "../rust-atomicwrites" }
